# mle-pr-final

./: .env_template  .gitignore  EDA.ipynb  EDA_2.ipynb  EDA_2_1.ipynb  EDA_utils.py  aws_utils.py  create_id_mapping.py  data_structure.md  data_structure.py  docker-compose.yaml  dockerfile  features_and_als.ipynb  features_range_model.ipynb  pyproject.toml  range_model.ipynb  recommendations_metrics.ipynb  requirements.txt  run_mlflow_tracking.sh  test_service.py  utils.py  utils_mlflow.py
service/: EventsStore.py  events_store.py  feature_generator.py  main.py  recommendations_service.py  recommender.py  recommender_repository.py
