[project]
name = "mle-pr-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.118.0",
    "implicit>=0.7.2",
    "jupyterlab>=4.4.7",
    "pip>=25.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
